--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,25 +2,37 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.aliindustries.groceryshoppinglist">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".createaccount"
-            android:parentActivityName=".ui.login.loginscreen"
-            android:theme="@style/AppTheme"
-            android:label="Create account"
+        <activity android:name=".itemunpaid"
+            android:parentActivityName=".moneyspentactivity"
             ></activity>
+        <activity android:name=".itempaid"
+            android:parentActivityName=".moneyspentactivity"
+            />
+        <activity
+            android:name=".moneyspentactivity"
+            android:label="Weekly spend"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".notificationactivity"
+            android:label="Notifications"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".createaccount"
+            android:label="Create account"
+            android:parentActivityName=".ui.login.loginscreen"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".ui.login.loginscreen"
+            android:label="@string/title_activity_loginscreen"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme"
-            android:label="@string/title_activity_loginscreen" />
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".splashscreen"
             android:noHistory="true"
@@ -33,8 +45,8 @@
         </activity>
         <activity
             android:name=".ItemActivity"
-            android:label="Add Item"
             android:configChanges="orientation|screenSize"
+            android:label="Add Item"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme" />
         <activity
@@ -45,6 +57,10 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <receiver
+            android:name=".AlarmReceiver"
+            android:enabled="true" />
     </application>
 
     <supports-screens
@@ -52,5 +68,9 @@
         android:normalScreens="true"
         android:smallScreens="true"
         android:xlargeScreens="true" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 </manifest>
